--- a/apps/ai-market/.env
+++ b/apps/ai-market/.env
@@ -5,3 +5,7 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/home
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/home
+
+OPENAI_API_KEY=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
+
+REPLICATE_API_TOKEN=r8_9CtfOZ4zBEC0ZAWOM9R7nlNqGEYxidP2ML3XR
