--- a/apps/ai-market/package.json
+++ b/apps/ai-market/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
+    "@hookform/resolvers": "^3.2.0",
+    "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
@@ -24,12 +29,17 @@
     "lucide-react": "^0.268.0",
     "next": "13.4.19",
     "next-themes": "^0.2.1",
+    "openai": "3.3",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-markdown": "^8.0.7",
+    "replicate": "^0.16.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.2"
   }
 }
