--- a/apps/ai-market/package.json
+++ b/apps/ai-market/package.json
@@ -37,11 +37,13 @@
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^8.0.7",
+    "react-typewriter": "^0.4.1",
     "replicate": "^0.16.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "typescript": "5.1.6",
+    "typewriter-effect": "^2.21.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
