--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_YWRlcXVhdGUtdGFoci03Mi5jbGVyay5hY2NvdW50cy5kZXYk
-CLERK_SECRET_KEY=sk_test_qMjj4LvVoozTYn17EAzFjlqXyACF6TbPCz7LCL1nnf
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
 
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/home
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/home
 
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
 
-REPLICATE_API_TOKEN=r8_9CtfOZ4zBEC0ZAWOM9R7nlNqGEYxidP2ML3XR
+REPLICATE_API_TOKEN=
